# optimus-quickstart

./: .env.example  .eslintrc.json  .gitignore  .gitleaksignore  .pylintrc  LICENSE  README.md  SECURITY.md  api.md  build.js  build.tester.js  build_pearl.sh  client.tsx  download_binaries.sh  forge.config.js  hardhat.config.js  jest.config.ts  log.txt  next.config.mjs  operate.yaml  package-lock.json  package.json  pearl.py  pearl_operate.spec  pyproject.toml  recover_wallet_info.py  recover_wallet_info.sh  report.py  run_service.py  run_service.sh  staking_report.py  stop_service.py  stop_service.sh  suggest_funding_report.py  tendermint.spec  tox.ini  tsconfig.json  utils.py  wallet_info.py
.github/workflows/: backend.yml  build.yml  common_checks.yml  e2e.yml  frontend.yml  gitleaks.yml  main.yml  release.yml
backend/: __init__.py  app.py  controller.py  operate.yaml  protocol.py  pyproject.toml  repo.py  server.py  service.py  test.py
backend/operate/: types.py
backend/operate/data/: __init__.py
backend/operate/data/contracts/service_staking_token/: contract.py  contract.yaml
backend/operate/ledger/: __init__.py  base.py  ethereum.py  profiles.py  solana.py
backend/operate/services/: _subgraph.py  manage.py  protocol.py  service.py
backend/scripts/: e2e_test.py  endpoint_e2e_test.py  test.py  test_e2e.py  test_staking_e2e.py  utils.py
components/Layout/: Layout.tsx
components/Marketplace/: Marketplace.tsx  MarketplaceItem.tsx  MarketplaceItemCard.tsx
components/QRModal/: QRModal.tsx
components/Spawn/: SpawnDone.tsx  SpawnHeader.tsx  index.tsx
components/YourAgents/: YourAgents.tsx
constants/: marketplace.ts  urls.ts
context/: AgentsProvider.tsx  ModalsProvider.tsx  ServicesProvider.tsx  SpawnContext.tsx  TabsProvider.tsx  index.ts
context/TabsProvider/: TabsProvider.test.tsx
contracts/: StakingActivityChecker.json
electron/: .eslintrc.json  afterPack.js  constants.js  docker.js  icons.js  install.js  loading.html  logger.js  main.js  notarize.js  ports.js  preload.js  processes.js  scripts.js  store.js  test.js  update.js
electron/constants/: index.js  paths.js  publishOptions.js
electron/loading/: index.html  loading.css  styles.css
electron/scripts/: install_brew.sh  install_docker_ubuntu.sh
enums/: AgentStatus.ts  ServiceStatus.ts  SpawnState.ts  Tabs.ts  index.ts
frontend/: .eslintrc.json  README.md  jest.config.js  jest.config.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/abi/: erc20Abi.ts  index.ts  mechActivityChecker.ts  multicall3Abi.ts  serviceStakingTokenMechUsage.ts
frontend/abis/: agentMech.ts  gnosisSafe.ts  multicall3.ts  serviceRegistryL2.ts  serviceRegistryTokenUtility.ts  serviceStakingTokenMechUsage.ts
frontend/client/: client.ts  client.tsx  enums.ts  index.ts  types.ts
frontend/common-util/: Confetti.js  index.ts  numberFormatters.ts  setTrayIcon.ts  truncate.ts
frontend/components/: Loading.tsx  Login.tsx  Main.tsx  Receive.tsx  Settings.tsx  Setup.tsx  Wrapper.tsx  index.ts
frontend/constants/: chains.ts  color.ts  contractAddresses.ts  contracts.ts  index.ts  intervals.ts  providers.ts  serviceMeta.ts  serviceTemplates.ts  stakingProgramMeta.ts  thresholds.ts  tokens.ts  unicode.ts  urls.ts
frontend/context/: AgentsProvider.tsx  AppInfoProvider.tsx  BalanceProvider.tsx  ElectronApiProvider.tsx  MasterSafeProvider.tsx  ModalProvider.tsx  OnlineStatusProvider.tsx  PageStateProvider.tsx  RewardProvider.tsx  ServicesProvider.tsx  SettingsProvider.tsx  SetupProvider.tsx  StakingContractInfoProvider.tsx  StakingProgramContext.tsx  StoreProvider.tsx  TabsProvider.tsx  UserBalanceProvider.tsx  (+2 more)
helpers/: copyToClipboard.ts
hooks/: index.ts  useAgents.tsx  useBackend.tsx  useEthers.tsx  useModals.tsx  useServices.tsx  useSpawn.tsx  useTabs.tsx
operate/: __init__.py  cli.py  constants.py  keys.py  pearl.py  pyinstaller_cur_dir_patch.py  resource.py  types.py
pages/: _app.tsx  index.tsx
scripts/: __init__.py  fund.py  github.py  setup_wallet.py  test_e2e.py  test_staking_e2e.py  test_twikit.py  transfer_olas.py  twitter_verify.py
service/: Services.ts
templates/: superfest.yaml  trader.yaml
tests/: __init__.py
theme/: mainTheme.ts
types/: Agent.ts  BuildServiceResponse.ts  MarketplaceItem.ts  Service.ts  ServiceMeta.ts
(+298 files in other folders)
