[tool.poetry]
name = "olas-operate-middleware"
version = "0.1.0-rc2"
description = ""
authors = ["David Vilela <dvilelaf@gmail.com>", "Viraj Patel <vptl185@gmail.com>"]
readme = "README.md"
packages = [
    { include = "operate" }
]
include = [
    "operate/data/acn/*",
    "operate/data/contracts/*",
    "operate/data/contracts/service_staking_token/*",
    "operate/data/contracts/service_staking_token/build/*",
]

[tool.poetry.scripts]
operate = "operate.cli:main"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
open-autonomy = ">=0.14.10"
open-aea-ledger-ethereum = ">=1.50.0"
docker = "6.1.2"
clea = ">=0.1.0rc4"
starlette = ">=0.36.3"
uvicorn = ">=0.27.0"
requests-toolbelt = "1.0.0"
fastapi = ">=0.110.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
